[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kallistoapi"
version = "2.0.5"
description = "Sensry Kallisto API package"
authors = [{ name = "Dzmitry Yemelyanau", email = "d.yemelyanau@sensry.de" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["bleak==0.22.3",
    "dateutils==0.6.12",
    "pywin32==310; sys_platform == 'win32'",
    "crcmod==1.7",
    "protobuf==6.31.1"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
kallistoapi = ["kallistoapi/config.proto"]

[project.urls]
Homepage = "https://github.com/sensry-de/kallisto-api-pypi"
